proj1/tests/error/long_string_double_quote.py
print """jfeowfjwoiej"fjewoifjwoiejfwoeijf""fjweoifjwoiefjowiejfoweijfowiejfoiwejfoiwej
oifjweoifjweoifjweoifjweoi
